tests/qd/compile_errors/loop_var_outside_loop.qd
// Test: using $ (loop variable) outside loop

fn main() {
	10 $ add . nl
}
